--- a/Source/Sandy_Detailed_RPG_Inventory/Sandy_Detailed_RPG_Inventory.csproj
+++ b/Source/Sandy_Detailed_RPG_Inventory/Sandy_Detailed_RPG_Inventory.csproj
@@ -48,31 +48,20 @@
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\..\Core\Assembly-CSharp.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="CombatExtended">
-      <HintPath>..\..\..\..\Core\CombatExtended.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="UnityEngine">
-      <HintPath>..\..\..\..\Core\UnityEngine.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
+    <Compile Include="RPG_Settings.cs" />
+    <Compile Include="RPG_DefOf.cs" />
+    <Compile Include="RPG_GearTab.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
-    <Compile Include="MyClass.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Reference Include="Assembly-CSharp">
+      <HintPath>..\..\..\1.0\Assembly-CSharp.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine">
+      <HintPath>..\..\..\1.0\UnityEngine.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
