--- a/Source_1_2/Sandy_Detailed_RPG_Inventory/Sandy_Detailed_RPG_Inventory/Sandy_Detailed_RPG_Inventory.csproj
+++ b/Source_1_2/Sandy_Detailed_RPG_Inventory/Sandy_Detailed_RPG_Inventory/Sandy_Detailed_RPG_Inventory.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DA298B9D-7E19-4A1B-80EB-806B4109DDEE}</ProjectGuid>
+    <ProjectGuid>{2098C897-A5AF-42AD-8316-FD2A04DBEE6B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Sandy_Detailed_RPG_Inventory</RootNamespace>
@@ -18,22 +18,21 @@
     <DebugType>none</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\..\..\Assemblies\</OutputPath>
-    <DefineConstants>
-    </DefineConstants>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>none</DebugType>
+    <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\..\Assemblies\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\..\..\1.2\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\..\..\..\..\RPG Dependencies\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -45,28 +44,33 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="TorannMagic">
-      <HintPath>..\..\..\..\..\1.2\Mod References\TorannMagic.dll</HintPath>
+      <HintPath>..\..\..\..\..\RPG Dependencies\TorannMagic.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine">
-      <HintPath>..\..\..\..\..\1.2\UnityEngine.dll</HintPath>
+      <HintPath>..\..\..\..\..\RPG Dependencies\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
-      <HintPath>..\..\..\..\..\1.2\UnityEngine.CoreModule.dll</HintPath>
+      <HintPath>..\..\..\..\..\RPG Dependencies\UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.IMGUIModule">
-      <HintPath>..\..\..\..\..\1.2\UnityEngine.IMGUIModule.dll</HintPath>
+      <HintPath>..\..\..\..\..\RPG Dependencies\UnityEngine.IMGUIModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.TextCoreModule">
+      <HintPath>..\..\..\..\..\RPG Dependencies\UnityEngine.TextCoreModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.TextRenderingModule">
-      <HintPath>..\..\..\..\..\1.2\UnityEngine.TextRenderingModule.dll</HintPath>
+      <HintPath>..\..\..\..\..\RPG Dependencies\UnityEngine.TextRenderingModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RPG_DefOf.cs" />
     <Compile Include="RPG_GearTab.cs" />
     <Compile Include="RPG_ModCheck.cs" />
     <Compile Include="RPG_Settings.cs" />
